# QT_Kernel_OS

./: CMakeLists.txt  CMakeLists.txt.user.0f0aaec  CMakeLists.txt.user.1df1f4f  Doxyfile  LICENSE  README.md  architecture.puml  asm_.srctrlprj  bootloader.cpp  bootloader.h  call_graph.dot  cmdwindow.cpp  cmdwindow.h  cmdwindow.ui  cmdwindow.ui.autosave  mac_run.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make_architecture_png.sh  processmanager.cpp  processmanager.h  rebuild_kernelos.srctrlprj  resources.qrc  smartpointerdialog.cpp  smartpointerdialog.h  smartpointerdialog.ui
.ccls-cache/@@Users@azabell@Desktop@workspace_qt@QT_Kernel_OS/: @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@AvailabilityInternal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@AvailabilityInternalLegacy.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@AvailabilityVersions.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_ctermid.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_stdio.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types.h.blob  (+45 more)
C_lib/: Makefile  memo.c  non_existent_file.txt  td_kernel_engine  test
C_lib/include/: kernel_asm.h  kernel_chat.h  kernel_engine.h  kernel_lib.h  (+3 more)
docs/: annotated.html  az__atoi_8c.html  az__atoi_8c_source.html  az__bzero_8c.html  az__chrpos_8c_source.html  az__isdigit_8c.html  az__isdigit_8c_source.html  az__itoa_8c.html  az__itoa_8c_source.html  az__memalloc_8c_source.html  az__memset_8c.html  az__nbrlen_8c_source.html  az__putchar_8c.html  az__putchar_8c_source.html  az__puthex_8c.html  az__puthex_8c_source.html  az__putnbr_8c_source.html  az__putoctal_8c.html  az__putstr_8c.html  az__putunsigned_8c.html  az__putunsigned_8c_source.html  az__strchr_8c.html  az__strchr_8c_source.html  az__strcmp_8c.html  az__strcmp_8c_source.html  az__strsub_8c.html  dir_608c8553786aa846e2864286ef41b6b0.html  dir_e67d1232b7d64144531cbed947b3e1a2.html  ename_8c_8inc.html  functions.html  globals_c.html  globals_defs.html  globals_eval.html  globals_func.html  globals_func_c.html  globals_func_g.html  globals_func_l.html  globals_func_m.html  globals_func_s.html  globals_func_t.html  (+25 more)
html/: az__bzero_8c_source.html  az__chrpos_8c.html  az__isalpha_8c.html  az__isalpha_8c_source.html  az__isprint_8c.html  az__isprint_8c_source.html  az__memalloc_8c.html  az__memset_8c_source.html  az__nbrlen_8c.html  az__putchar__fd_8c.html  az__putchar__fd_8c_source.html  az__putnbr_8c.html  az__putoctal_8c_source.html  az__putstr_8c_source.html  az__strlen_8c.html  az__strlen_8c_source.html  az__strsub_8c_source.html  classes.html  dir_345a4dc6e1e53c0636681ee3b5259ada.html  dir_9e4bc10839c6295d873d87da5da13fd3.html  doxygen_crawl.html  ename_8c_8inc_source.html  files.html  functions_vars.html  globals.html  globals_b.html  globals_d.html  globals_e.html  globals_enum.html  globals_f.html  globals_func_b.html  globals_func_d.html  globals_func_f.html  globals_func_i.html  globals_func_k.html  globals_func_p.html  globals_func_r.html  globals_g.html  globals_i.html  globals_j.html  (+34 more)
latex/: annotated.tex  az__atoi_8c.tex  az__atoi_8c_source.tex  az__bzero_8c.tex  az__bzero_8c_source.tex  az__chrpos_8c.tex  az__chrpos_8c_source.tex  az__isalpha_8c.tex  az__isalpha_8c_source.tex  az__isdigit_8c.tex  az__isdigit_8c_source.tex  az__isprint_8c.tex  az__isprint_8c_source.tex  az__itoa_8c.tex  az__itoa_8c_source.tex  az__memalloc_8c.tex  az__memalloc_8c_source.tex  az__memset_8c.tex  az__memset_8c_source.tex  az__nbrlen_8c.tex  az__nbrlen_8c_source.tex  az__putchar_8c.tex  az__putchar_8c_source.tex  az__putchar__fd_8c.tex  az__putchar__fd_8c_source.tex  az__puthex_8c.tex  az__puthex_8c_source.tex  az__putnbr_8c.tex  az__putnbr_8c_source.tex  az__putoctal_8c.tex  az__putoctal_8c_source.tex  az__putstr_8c.tex  az__putstr_8c_source.tex  az__putunsigned_8c.tex  az__putunsigned_8c_source.tex  az__strchr_8c.tex  az__strchr_8c_source.tex  az__strcmp_8c.tex  az__strcmp_8c_source.tex  az__strlen_8c.tex  (+49 more)
(+134 files in other folders)
